# analise-pncp

./: .gitignore  Makefile  README.md  analise-exploratoria.md  anthropic-rest-use.md  pyproject.toml
.agents/: AGENTS.md
config/: analysis.yaml  paper.yaml
data/processed/: candidate_records.json  document_sample.json  field_completeness.csv  metrics.json  pipeline_metadata.json  q3_document_selection.json  q3_document_texts.jsonl  q3_eval_inputs.jsonl  q3_semantic_evaluations.jsonl  q3_semantic_metrics.json  q4_document_quality_evaluations.jsonl  q4_document_quality_metrics.json  sample.csv  sample.json  script_execution_events.json
data/raw/: belo-horizonte_cnpj_18715383000140_contratacoes.json  collection_attempt_metadata.json  collection_errors.json  collection_metadata.json  collection_request_metrics.jsonl  document_errors.json  document_request_metrics.jsonl  q3_codex_responses.jsonl  q3_documents_manifest.json  rio-de-janeiro_cnpj_42498733000148_contratacoes.json  sample_documents.json  sao-paulo_cnpj_46395000000139_contratacoes.json  sao-paulo_municipio_3550308_contratacoes.json  vitoria_cnpj_27142058000126_contratacoes.json
paper/: references.bib  relatorio-final.md  template.tex
report/: relatorio-final.md  template.tex
report/output/: relatorio-final.aux  relatorio-final.out  relatorio-final.tex  relatorio-final.toc
scripts/: analyze_documents_claude.py  rebuild_q2.py
tests/: test_config.py  test_filters.py  test_paper.py  test_pncp_client.py  test_report.py  test_sampling.py  test_semantic.py  test_utils.py  test_workflow.py
(+18 files in other folders)
